Replace calls to class.newInstance() with class.getDeclaredConstructor().newInstance().