@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 2019 Neil C Smith.
+ * Copyright 2020 Neil C Smith.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License version 3 only, as
@@ -36,7 +36,6 @@ import org.praxislive.core.Root;
 
 /**
  *
- * @author Neil C Smith (http://neilcsmith.net)
  */
 public class AbstractComponentFactory implements ComponentFactory {
 
@@ -68,7 +67,7 @@ public class AbstractComponentFactory implements ComponentFactory {
         }
         try {
             Class<? extends Component> cl = data.getComponentClass();
-            return cl.newInstance();
+            return cl.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new ComponentInstantiationException(ex);
         }
@@ -82,7 +81,7 @@ public class AbstractComponentFactory implements ComponentFactory {
         }
         try {
             Class<? extends Root> cl = data.getComponentClass();
-            return (Root) cl.newInstance();
+            return (Root) cl.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new ComponentInstantiationException(ex);
         }
