@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 2018 Neil C Smith.
+ * Copyright 2020 Neil C Smith.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License version 3 only, as
@@ -39,7 +39,6 @@ import org.praxislive.logging.LogLevel;
 
 /**
  *
- * @author Neil C Smith <http://neilcsmith.net>
  */
 abstract class BytesBinding extends PropertyControl.Binding {
 
@@ -178,7 +177,7 @@ abstract class BytesBinding extends PropertyControl.Binding {
                 if (field.getType().isArray()) {
                     field.set(delegate, Array.newInstance(field.getType().getComponentType(), 0));
                 } else {
-                    field.set(delegate, field.getType().newInstance());
+                    field.set(delegate, field.getType().getDeclaredConstructor().newInstance());
                 }
             } else {
                 field.set(delegate, new ObjectInputStream(value.asInputStream()).readObject());
